Fixes issues with alignment sometimes not overriding correctly when included on both column, row, and grid

--- a/src/definitions/collections/grid.less
+++ b/src/definitions/collections/grid.less
@@ -622,29 +622,41 @@
   Horizontally Centered
 -----------------------*/
 
-/* Vertical Centered */
+/* Left Aligned */
 .ui[class*="left aligned"].grid,
 .ui[class*="left aligned"].grid > .row > .column,
 .ui[class*="left aligned"].grid > .column,
 .ui.grid [class*="left aligned"].column,
-.ui.grid > [class*="left aligned"].row > .column {
+.ui.grid > [class*="left aligned"].aligned.row > .column {
   text-align: left;
 }
+.ui.grid [class*="left aligned"].column{
+  text-align: left !important;
+}
+
+/* Center Aligned */
 .ui[class*="center aligned"].grid,
 .ui[class*="center aligned"].grid > .row > .column,
 .ui[class*="center aligned"].grid > .column,
-.ui.grid [class*="center aligned"].column,
-.ui.grid > [class*="center aligned"].row > .column {
+.ui.grid > [class*="center aligned"].aligned.row > .column {
   text-align: center;
 }
+.ui.grid [class*="center aligned"].column{
+  text-align: center !important;
+}
+
+/* Right Aligned */
 .ui[class*="right aligned"].grid,
 .ui[class*="right aligned"].grid > .row > .column,
 .ui[class*="right aligned"].grid > .column,
-.ui.grid [class*="right aligned"].column,
-.ui.grid > [class*="right aligned"].row > .column {
+.ui.grid > [class*="right aligned"].aligned.row > .column {
   text-align: right;
 }
+.ui.grid [class*="right aligned"].column{
+  text-align: right !important;
+}
 
+/* Justified */
 .ui.justified.grid,
 .ui.justified.grid > .row > .column,
 .ui.justified.grid > .column,
@@ -652,6 +664,48 @@
 .ui.grid > .justified.row > .column {
   text-align: justify;
   hyphens: auto;
+}
+.ui.grid .justified.column {
+  text-align: justify !important;
+  hyphens: auto !important;
+}
+
+/*----------------------
+   Vertically Aligned
+-----------------------*/
+
+/* Top Aligned */
+.ui[class*="top aligned"].grid,
+.ui[class*="top aligned"].grid > .row > .column,
+.ui[class*="top aligned"].grid > .column,
+.ui.grid [class*="top aligned"].column,
+.ui.grid > [class*="top aligned"].aligned.row > .column {
+  vertical-align: top;
+}
+.ui.grid [class*="top aligned"].column{
+  vertical-align: top !important;
+}
+
+/* Middle Aligned */
+.ui[class*="center aligned"].grid,
+.ui[class*="middle aligned"].grid > .row > .column,
+.ui[class*="middle aligned"].grid > .column,
+.ui.grid > [class*="middle aligned"].aligned.row > .column {
+  vertical-align: middle;
+}
+.ui.grid [class*="middle aligned"].column{
+  vertical-align: middle !important;
+}
+
+/* Bottom Aligned */
+.ui[class*="bottom aligned"].grid,
+.ui[class*="bottom aligned"].grid > .row > .column,
+.ui[class*="bottom aligned"].grid > .column,
+.ui.grid > [class*="bottom aligned"].aligned.row > .column {
+  vertical-align: bottom;
+}
+.ui.grid [class*="bottom aligned"].column{
+  vertical-align: bottom !important;
 }
 
 /*----------------------
@@ -780,33 +834,6 @@
 
 
 
-
-/*----------------------
-  Vertically Centered
------------------------*/
-
-/* Vertical Centered */
-.ui[class*="top aligned"]grid,
-.ui[class*="top aligned"]grid > .row > .column,
-.ui[class*="top aligned"]grid > .column,
-.ui.grid [class*="top aligned"]column,
-.ui.grid > [class*="top aligned"]row > .column {
-  vertical-align: top;
-}
-.ui[class*="middle aligned"].grid,
-.ui[class*="middle aligned"].grid > .row > .column,
-.ui[class*="middle aligned"].grid > .column,
-.ui.grid [class*="middle aligned"].column,
-.ui.grid > [class*="middle aligned"].row > .column {
-  vertical-align: middle;
-}
-.ui[class*="bottom aligned"].grid,
-.ui[class*="bottom aligned"].grid > .row > .column,
-.ui[class*="bottom aligned"].grid > .column,
-.ui.grid [class*="bottom aligned"].column,
-.ui.grid > [class*="bottom aligned"].row > .column {
-  vertical-align: bottom;
-}
 
 /*----------------------
   Equal Height Columns
